--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -36,15 +36,16 @@ dependencies:
   photo_view: ^0.10.3
   image_picker: ^0.6.7+22
   cached_network_image: ^2.5.0
-  shared_preferences: ^0.5.12+4
+  shared_preferences: ^2.0.6
   firebase_storage: 
   circular_check_box: 
   pie_chart:
   flutter_riverpod: ^0.14.0+2
   connectivity: ^3.0.4
-  overlay_support: ^1.2.1
+  # overlay_support: ^1.2.1
   uuid: 3.0.4
   ffi: ^1.0.0
+  flutter_custom_clippers: ^2.0.0
 
 
   # The following adds the Cupertino Icons font to your application.
